# HydraSleuth

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  check-models.js  package-lock.json  package.json  test-api.js  tsconfig.base.json  tsconfig.json
apps/frontend/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/app/api/cases/: route.ts
apps/frontend/app/api/cases/[caseId]/: route.ts
apps/frontend/app/app/: page.tsx
apps/frontend/app/cases/[caseId]/: page.tsx
apps/frontend/app/docs/: page.tsx
apps/frontend/components/: case-charts.tsx  case-detail-shell.tsx  case-submission-form.tsx  home-dashboard.tsx  landing-hero.tsx  report-card.tsx  report-summary.tsx  status-pill.tsx  use-pretext-paragraph.ts
apps/frontend/components/cases/: case-detail-client.tsx
apps/frontend/lib/: report-store.ts
programs/hydra_sleuth/: Cargo.toml
programs/hydra_sleuth/src/: lib.rs
