[package]
name = "hydra_sleuth"
version = "0.1.0"
description = "HydraSleuth Anchor entrypoint for private multi-agent investigations"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hydra_sleuth"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "=0.32.1", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "=0.6.6", features = ["anchor", "disable-realloc"] }
